# rtos_study

./: .mxproject  CMakeCache.txt  CMakeLists.txt  STM32H562xx_FLASH.ld  STM32H562xx_RAM.ld  h562_rtos_study.ioc
AZURE_RTOS/App/: app_azure_rtos.h  app_azure_rtos_config.h
Core/Inc/: app_freertos.h  app_threadx.h  cli.h  main.h  ms_work.h  pcm5102a.h  que_ctl.h  sai.h  status.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h  tim.h  tx_user.h  usart.h
Core/Src/: app_freertos.c  app_threadx.c  cli.c  gpdma.c  gpio.c  main.c  ms_work.c  pcm5102a.c  que_ctl.c  sai.c  sdmmc.c  status.c  stm32h5xx_hal_msp.c  stm32h5xx_hal_timebase_tim.c  stm32h5xx_it.c  tim.c  usart.c
FileX/App/: app_filex.c  app_filex.h
cmake/: starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
